# honeybot

./: .buildinfo  .gitignore  .google-cookie  .pep8speaks.yml  .pre-commit-config.yaml  .travis.yml  CHANGES.md  CODE_OF_CONDUCT.md  CONNECT.conf  CONTRIBUTING.md  Dockerfile  LICENSE  PULL_REQUEST_TEMPLATE.md  README.html  README.md  TESTIMONIALS.md  _config.yml  genindex.html  how_to.html  includeme.html  index.html  index.md  main.html  main.py  objects.inv  params.json  pluginInfo.py  plugins.html  plugins_info.md  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test.py  test_plugin_script.py
.clusterfuzzlite/: Dockerfile  build.sh  demo_fuzzer.py
.doctrees/: environment.pickle  how_to.doctree  index.doctree  main.doctree  plugins.doctree
.doctrees/How_Tos/: contributing.doctree  documentation.doctree  plugins.doctree  setup_bot.doctree
.doctrees/Plugins/: development.doctree  fun.doctree  miscellaneous.doctree  (+1 more)
.github/: pull_request_template.md
How_Tos/: contributing.html  documentation.html  plugins.html  setup_bot.html
Plugins/: development.html  fun.html  miscellaneous.html  utility.html
_sources/: README.rst.txt  how_to.rst.txt  index.rst.txt  main.rst.txt  plugins.rst.txt
_static/: documentation_options.js
clusterfuzzlite/: Dockerfile  build.sh
docker/: Dockerfile
docs/: Makefile  make.bat
honeybot/: CONNECT.conf  PLUGINS.conf  email_config.conf  gui_manager.py  lab.py  main.py  manage.py  manager.py  pluginInfo.py  plugins_info.md  run.py  store.py  test.py  test_plugin_script.py  tpbquote.py
log/: 27-11-2022.txt
plugins/: abbreviation.py  age.py  blackjack.py  caesar_cipher.py  calc.py  channeljoin.py  comic.py  converter.py  date.py  debug.py  dictionary.py  fact.py  google.py  greet.py  help.py  horoscope.py  joins.py  joke.py  log.py  maths.py  monopoly.py  news.py  pydocs.py  quote.py  riddle.py  roman_numeral.py  send_message.py  test.py  transfer-rumour.py  uptime.py  username.py
settings/: AUTOJOIN_CHANNELS.conf  CONNECT.conf  PLUGINS.conf  email_config.conf
workshop/HoneyGUI/: CMakeLists.txt  configDisplay.cpp  configDisplay.h  controlDisplay.cpp  controlDisplay.h  guiBase.cpp  guiBase.h  honey.glade  main.cpp  optionDisplay.cpp  optionDisplay.h  optionList.cpp  optionList.h  path.txt  pluginDisplay.cpp  pluginDisplay.h
workshop/HoneyGUI/honeygui/src/: honeygui.py  plugin.py  pluginlist.py
workshop/HoneyGUI/honeygui/ui/: HTextInput.qml  HoneyGui.qml  PluginConfig.qml  Plugins.qml
(+385 files in other folders)
