[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
extend_skip = [".github", ".idea", "__pycache__"]
line_length = 100

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310']
exclude = '\.txt?'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
(
  \.git
  |\.github
  |\.idea
  |__pycache__
  |venv
)
'''

[tool.bandit]
exclude_dirs = [".git", ".github", ".idea", "__pycache__", "venv", "workshop"]
